# ardupilot_gazebo

./: CMakeLists.txt  package.xml
gazebo_worlds/: iris_ardupilot.world
include/: LiftDragPlugin.hh  WindPlugin.hh
src/: LiftDragPlugin.cc  WindPlugin.cc
